--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "angular-responsive-carousel": "^2.0.1",
     "bootstrap": "^4.5.3",
+    "express": "^4.17.1",
     "firebase": "^8.2.4",
     "jquery": "^3.5.1",
     "ngx-toastr": "^13.2.0",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
